fixed horizontal scrollbar

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,14 @@
-body{
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative
+}
+
+/* body{
     width: 100%;
     overflow-x: hidden;
-}
+} */
 /* .row{
   margin-right: 20px;
   margin-left: 0;
